# Calender_Agent

./: .gitignore  README.md  generate_token.py  pyproject.toml
src/: main.py
src/graphs/: call_llm.py  decider.py  graph.py  router.py
src/llm/: gemini.py
src/state/: models.py
src/tools/: calender_tool.py  scraping_tool.py  tools.py
src/utils/: calender_api.py  logger.py  prompt.py  summarizer.py
